# steganography_cpp

./: .gitignore  README.md
stegkit-cpp/: CMakeLists.txt
stegkit-cpp/apps/: stegimg.cpp  stegvid.cpp
stegkit-cpp/cmake/: FindFFmpeg.cmake
stegkit-cpp/docs/: ALGORITHMS.md  DESIGN.md  ROADMAP.md
stegkit-cpp/examples/: hide_image_in_image.sh  hide_image_in_video.sh  hide_video_in_video.sh
stegkit-cpp/include/steg/: bitstream.hpp  checksum.hpp  container.hpp  dct_embedder.hpp  dwt_embedder.hpp  embedder.hpp  error_correction.hpp  image_codec.hpp  key_schedule.hpp  lsb_embedder.hpp  mv_embedder.hpp  pipeline.hpp  rng.hpp  video_codec.hpp
stegkit-cpp/src/: bitstream.cpp  checksum.cpp  container.cpp  dct_embedder.cpp  dwt_embedder.cpp  error_correction.cpp  image_codec.cpp  key_schedule.cpp  lsb_embedder.cpp  mv_embedder.cpp  pipeline.cpp  rng.cpp  video_codec.cpp
stegkit-cpp/tests/: test_bitstream.cpp  test_checksum.cpp  test_container.cpp  test_crypto.cpp  test_dct.cpp  test_dwt.cpp  test_ecc.cpp  test_lsb.cpp
stegkit-cpp/tools/: capacity_scan.cpp  gen_noise.cpp
